Deactivate workflow and update README because we deploy the master branch directly now on GitHub pages without a build step.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
-name: Build and deploy Jekyll site to GitHub Pages
+name: Build and deploy Jekyll site to the static branch
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
 
 jobs:
   deploy:
