--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@ links:
   uciteli: https://www.imise.uni-leipzig.de/en/Mitarbeiter/Alexandr_Uciteli
   labudde: https://www.cb.hs-mittweida.de/professoren-innen/forensik/prof-labudde/
   mohaupt: https://www.cb.hs-mittweida.de/mitarbeiterinnen-mitarbeiter-in-ihren-fachgruppen/mohaupt-marleen/
-  ludwig: https://www.cb.hs-mittweida.de/mitarbeiterinnen-mitarbeiter-in-ihren-fachgruppen/ludwig-andy/
+  ludwig: https://www.researchgate.net/profile/Andy-Ludwig-2
+  heuschkel: https://www.cb.hs-mittweida.de/mitarbeiterinnen-mitarbeiter-in-ihren-fachgruppen/heuschkel-marie-luise/
+  schmiedel: https://www.cb.hs-mittweida.de/mitarbeiterinnen-mitarbeiter-in-ihren-fachgruppen/schmiedel-fabian/
   hoeffner: https://www.imise.uni-leipzig.de/Mitarbeiter/Konrad_Hoeffner
 
 relative_links:
